# StarshipAscension

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  install-ubuntu-deps.sh  install.sh  meson.build  run.sh
include/: game.h  game_state.hpp  game_ui.hpp  ship.h  shipsystem.h  util.h
src/: captains_log.cpp  crew_manager.cpp  game.cpp  game_state.cpp  game_ui.cpp  main.cpp  save_manager.cpp  ship.cpp  util.cpp
